--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,6 +137,7 @@ p{
 
 .service-area{
   background-color: #f2f2f2;
+  padding: 15px 0;
 
 }
 .service {
@@ -174,4 +175,102 @@ p{
 
 .single-service a:hover{
   color: teal;
+}
+
+/* gallery style */
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.single-gallery {
+  flex-basis: 23%;
+  margin-bottom: 32px;
+  border: 1px solid #f2f2f2;
+  padding: 5px;
+  border-radius: 5px;
+  transition: .3s;
+}
+.single-gallery:hover {
+  transform: scale(1.1);
+}
+
+
+/* contact style */
+.contact-area{
+  background-color: #f2f2f2;
+  margin: 20px 0;
+  padding: 15px 0;
+}
+
+.contact {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.contact-form {
+  flex-basis: 60%;
+}
+.contact-address {
+  flex-basis: 36%;
+}
+
+.contact-form input,textarea {
+  width: 100%;
+  font-size: 15px;
+  padding: 8px;
+  margin-bottom: 15px;
+  text-transform: capitalize;
+}
+
+.contact-form input[type="submit"]{
+  background-color: tomato;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: #fff;
+  padding: 10px 0;
+  transition: .3s;
+}
+
+.contact-form input[type="submit"]:hover{
+  color: teal;
+  cursor: pointer;
+}
+
+
+.single-addreaa {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+.single-addreaa i {
+  font-size: 12px;
+  border: 1px solid tomato;
+  padding: 10px;
+  border-radius: 50%;
+  background-color: tomato;
+  margin-bottom: 10px;
+}
+.single-addreaa h2 {
+  margin-left: 10px;
+  font-weight: 400;
+  font-size: 25px;
+}
+.single-addreaa h2 span {
+  display: block;
+  font-size: 15px;
+  font-weight: 400;
+  margin-left: 3px;
+}
+
+/* footer style */
+.footer-area{
+  text-align: center;
+  color: #fff;
+  background-color: teal;
+  margin-top: 30px;
+}
+.footer-area p{
+  padding: 5px 0;
 }
